cmake_minimum_required(VERSION 3.15)
project(food_data_provider)

set(CMAKE_CXX_STANDARD 14)

add_executable(food_data_provider
        .idea/.gitignore
        .idea/.name
        .idea/food-data-provider.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/food_data_provider.cbp
        cmake-build-debug/food_data_provider.exe
        cmake-build-debug/Makefile
        CMakeLists.txt
        main.c)
